# LLRS

./: .clang-format  .gitignore  README.md  meson.build  setup.py  temp.tex  wfm.md
modules/LLRS-exe/: meson.build
modules/LLRS-lib/: meson.build
modules/LLRS-lib/common-include/: PreProc.h  Settings.h
modules/LLRS-lib/include/: llrs.h
modules/LLRS-lib/modules/collector/: meson.build
modules/LLRS-lib/modules/collector/include/: Collector.h
modules/LLRS-lib/modules/image-processing/: meson.build
modules/LLRS-lib/modules/image-processing/include/: ImageProcessor.h
modules/LLRS-lib/modules/jsonwrapper/: JsonWrapper.cu  JsonWrapper.h  meson.build
modules/LLRS-lib/modules/jsonwrapper/include/: JsonWrapper.h
modules/LLRS-lib/modules/reconfiguration/: meson.build
modules/LLRS-lib/modules/reconfiguration/include/: Algorithms.h
modules/LLRS-lib/modules/setup/: meson.build
modules/LLRS-lib/modules/setup/include/: Setup.h
modules/LLRS-lib/modules/setup/src/: Setup.cu
modules/LLRS-lib/modules/solver/: meson.build
modules/LLRS-lib/modules/utility/: meson.build
modules/LLRS-lib/modules/waveform-streaming/: meson.build
modules/LLRS-lib/modules/waveform-synthesis/: meson.build
modules/LLRS-lib/src/: llrs.cu
modules/awg/: Makefile  README.md  config.yml  meson.build
modules/awg/awg/spcm/: meson.build
modules/awg/include/: awg.hpp  common.hpp
modules/awg/include/common/: spcm_lib_card.h
modules/awg/spcm/: meson.build
modules/awg/spcm/include/: spcm_includes.h
modules/awg/src/: awg.cpp
modules/awg/src/common/: spcm_lib_card.cpp
modules/experiment-hdf5-wrapper/: main.cpp  meson.build
modules/experiment-hdf5-wrapper/include/: globals_config.h  globals_not_found_exceptions.h  movements_config.h  shot_file.h
modules/experiment-hdf5-wrapper/src/: globals_config.cpp
modules/fgc/: README.md  meson.build
modules/fgc/ActiveSDKv01.08.02/: meson.build
modules/fgc/ActiveSDKv01.08.02/include/: ADL.h  ActiveBrowser.h  ActiveDeviceFactory.h  DVPAPI.h  GenTL.h  TLActiveSilicon.h  adl_api.h  as_trace_api.h  as_trace_error.h  as_trace_os.h  as_trace_server_api.h  avi_handle.h  avi_lib.h  dvpapi_cuda.h  dvpapi_d3d11.h  dvpapi_d3d9.h  dvpapi_gl.h  pbl_api.h  pcc_api.h  pdl_api.h  phx_api.h  phx_os.h  pil_api.h  tmg2_api.h  tmg_api.h  tmg_err.h  tmg_os.h  tmg_ovl.h  tmg_pro.h
modules/fgc/include/: activesilicon-1xcld.hpp  buffer.hpp  phx_api.hpp  phx_os.hpp  platform.hpp  preproc.hpp  settings.hpp  trace.hpp
modules/fgc/include/ActiveSDKv01.08.02/: ActiveBrowser.h  adl_api.h  as_trace_api.h  pcc_api.h  phx_api.h  pil_api.h  tmg2_api.h  tmg_os.h  tmg_ovl.h
modules/fgc/src/: activesilicon-1xcld.cpp  activesilicon-1xcld.cu  buffer.cpp  buffer.cu  platform.cpp  platform.cu  trace.cpp  trace.cu
modules/hdf5-wrapper/: README.md  main.cpp  meson.build
modules/hdf5-wrapper/include/: globals-config.h  globals-not-found-exceptions.h  globals_config.h  globals_not_found_exceptions.h  hdf5.h  shot-file.h  shot_file.h
modules/hdf5-wrapper/src/: globals-config.cpp  globals_config.cpp  hdf5.cpp  shot-file.cpp  shot_file.cpp
modules/image-acq-benchmarking/: README.md  main.cu  meson.build
modules/image-processing-benchmarking/: README.md  main.cu  meson.build
modules/llcs/: README.md  main.cpp  meson.build
modules/llcs/modules/fsm/: meson.build
modules/llcs/modules/h5-wrapper/: meson.build
modules/llcs/modules/llcs-server-handler/: meson.build
modules/llcs/modules/server/: meson.build
modules/llcs/modules/server-handler/: meson.build
modules/llcs/modules/state/: meson.build
modules/llcs/modules/trigger-detector/: meson.build
modules/llrs-exe/: README.md  main.cu  meson.build
modules/llrs-exe/include/: lles.h
modules/llrs-exe/modules/trigger-detector/: meson.build
modules/llrs-exe/src/: lles.cu
modules/llrs-lib/: meson.build
modules/llrs-lib/include/: llrs.h
modules/llrs-lib/modules/collector/: README.md  meson.build
modules/llrs-lib/modules/image-acquisition/: README.md  meson.build
modules/llrs-lib/modules/image-processing/: README.md  meson.build
modules/llrs-lib/modules/jsonwrapper/: README.md  meson.build
modules/llrs-lib/modules/reconfiguration/: README.md  meson.build
modules/llrs-lib/modules/setup/: README.md  meson.build
modules/llrs-lib/modules/solver/: README.md  meson.build
modules/llrs-lib/modules/utility/: README.md  meson.build
modules/llrs-lib/modules/waveform-streaming/: README.md  meson.build
modules/llrs-lib/modules/waveform-synthesis/: README.md  meson.build
modules/llrs-lib/src/: llrs.cu
modules/movement-generator/: README.md  main.cu  meson.build
modules/movement-generator/modules/server-handler/: meson.build
modules/movement-generator/modules/synthesiser/: meson.build
modules/operational-benchmarking/: README.md  meson.build
modules/operational-benchmarking/include/: atom.h  trap-array.h
modules/operational-benchmarking/src/: atom.cpp  atom.cu  loss.cu  main.cpp  main.cu  operations.cu  runtime.cu  trap-array.cpp  trap-array.cu
modules/runtime-benchmarking/: README.md  meson.build  table_template.tex
modules/runtime-benchmarking/python/: benchmark_helpers.py
modules/runtime-benchmarking/python/controllers/: benchmark.ipynb  operational_benchmarking_problem.py  reconfiguration_sequence.py  solver.py
modules/runtime-benchmarking/python/models/: array_model.py  atom_model.py  trap_model.py
modules/runtime-benchmarking/python/structures/: geometry.py  graph.py  lattice.py
modules/runtime-benchmarking/python/utils/: emulator_utils.py  operation_utils.py
modules/runtime-benchmarking/src/: main.cu
modules/trigger-detector/: meson.build
modules/trigger-detector/include/: trigger-detector.hpp
modules/trigger-detector/src/: trigger-detector.cpp
modules/waveform-loader/: README.md  main.cu  meson.build
modules/waveform-streaming-test/: meson.build
modules/wfm-streaming-benchmarking/: README.md  meson.build  null.cu  test.cu  timing.cu
modules/zmq-server/: README.md  meson.build
modules/zmq-server/include/: server.hpp
modules/zmq-server/src/: server.cpp
(+228 files in other folders)
